(lang dune 3.11)

(name aoc2023)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "John Leeds")

(package
 (name aoc2023)
 (synopsis "My Advent of Code Solutions")
 (description "My Advent of Code Solutions")
 (depends ocaml dune)
 (tags
  ("advent of code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
